@@ -4,20 +4,21 @@ import com.dwelguisz.base.AoCDay;
 import com.dwelguisz.base.ChineseRemainderTheorem;
 import org.apache.commons.lang3.tuple.Pair;
 
+import java.time.Instant;
 import java.util.*;
 import java.util.stream.Collectors;
 
 public class ShuttleSearch extends AoCDay {
     public void solve() {
-        List<String> lines = readFile("/home/dwelguisz/personal/advent-of-code/src/resources/year2020/day13/input.txt");
+        timeMarkers[0] = Instant.now().toEpochMilli();
+        List<String> lines = readResoruceFile(2020,13,false,0);
         Integer arrivalTime = Integer.parseInt(lines.get(0));
-        List<String> busIds = Arrays.stream(lines.get(1).split(","))
-                .collect(Collectors.toList());
-        Integer part1 = solutionPart1(arrivalTime, busIds);
-        Long part2 = solutionPart2(busIds);
-        System.out.println(String.format("Part 1 Answer: %d",part1));
-        System.out.println(String.format("Part 2 Answer: %d",part2));
-
+        List<String> busIds = Arrays.stream(lines.get(1).split(",")).toList();
+        timeMarkers[1] = Instant.now().toEpochMilli();
+        part1Answer = solutionPart1(arrivalTime, busIds);
+        timeMarkers[2] = Instant.now().toEpochMilli();
+        part2Answer = solutionPart2(busIds);
+        timeMarkers[3] = Instant.now().toEpochMilli();
     }
 
     private Integer solutionPart1(Integer arrivalTime, List<String> busIds) {
